'Fixed overflow, added overflow wrap'

--- a/src/app/components/create/create.component.css
+++ b/src/app/components/create/create.component.css
@@ -28,6 +28,10 @@
   justify-content: space-between;
 }
 
+.todo__task > p {
+  overflow-wrap: break-word;
+}
+
 .todo__task > div {
   display: flex;
   flex-direction: column;
